# graphene-assimp

./: CMakeLists.txt  conanfile.py
include/graphene/: assimp.hpp
src/: assimp.cpp
